# amm-jenga-play

./: .gitignore  LICENSE  README.md  finger.blend  fr3.py  fr3.srdf  fr3_test.ipynb  fr3_test.py  main.py  tf.ipynb
bak/: fingertip_before.scad  fingertip_before.stl  joint_limits_test.yaml
block_recog/: BLOCK_HSV_RANGE.txt  all_blocks_viz copy.ipynb  all_blocks_viz.ipynb  block_cv2_test.ipynb  func.py  func33.py  get_blocks_coordinate.ipynb  get_blocks_coordinate_upgrade.ipynb  get_coordinate.py  get_coordinate_once.py  get_dice.ipynb  get_hsvi.ipynb  get_pickle.py  get_transform.py  open3d.ipynb  open3daa.ipynb  transform.ipynb
block_recog_pkg/: CMakeLists.txt  __init__.py  image.py  package.xml  tmp.txt  tower.py  utils.py
control_pkg/: __init__.py  gripper.py  manipulator.py  scene.py
custom_description/: CMakeLists.txt  package.xml
custom_description/meshes/: camera.stl  finger.dae  finger.stl
custom_description/meshes/collision/: finger.stl
custom_description/meshes/visual/: finger.dae
custom_description/robots/: custom_hand.xacro  fr3.srdf.xacro  fr3.urdf.xacro  utils.xacro
fr3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_try/: base_geometry.scene  gripper_commander.py  jenga_control.py  jenga_obstacle_environment.py  jenga_plane.scene  jenga_refac_lys.py  jenga_refac_sth.py  joint_limits.yaml  python_move.py  python_move0713.py  python_move0717.py  python_move0718.py
rtb_try/: coordinate_move_function.ipynb  dynamics.ipynb  dynamics_revised.py  fr3.py  icra2021.ipynb  icra2021_revised.py  jun14_swift.ipynb  (+3 more)
(+96 files in other folders)
